--- a/src/components/meetus/MeetUs.scss
+++ b/src/components/meetus/MeetUs.scss
@@ -27,7 +27,7 @@
 
 .meet-title:before,
 .meet-title:after {
-  content: "Meet the Creators";
+  content: "Meet Us";
   position: absolute;
   left: 0;
 }
