--- a/src/components/world/World.scss
+++ b/src/components/world/World.scss
@@ -18,7 +18,7 @@
 
 .world-title:before,
 .world-title:after {
-  content: "The World of Project Pulse";
+  content: "The World";
   position: absolute;
   left: 0;
 }
