--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -10,37 +10,11 @@ $glitch-bg-color: $bg-color;
   );
 }
 
-.outer-container {
-  width: 100%;
-  height: 100%;
-  text-align: center;
+.container {
+  overflow: hidden;
+  display: block;
+  margin-left: -410px;
 }
-.inner-container {
-  display: flex;
-  justify-content: center;
-}
-.video-overlay {
-  position: absolute;
-  height: inherit;
-  width: inherit;
-  // left: 0px;
-  // top: 0px;
-
-  // padding: 5px 5px;
-  // font-size: 20px;
-  // font-family: Helvetica;
-  // color: #fff;
-}
-video {
-  width: 100%;
-  height: 100%;
-}
-
-// .logo {
-//   margin-top: 14%;
-//   height: 50%;
-//   width: 50%;
-// }
 
 .glitch {
   position: relative;
