--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -10,10 +10,34 @@ $glitch-bg-color: $bg-color;
   );
 }
 
-.container {
+// .container {
+//   overflow: hidden;
+//   display: block;
+//   //margin-left: -410px;
+// }
+
+#video-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh; /* Use viewport height units to set container height */
+  width: 100vw; /* Use viewport width units to set container width */
   overflow: hidden;
-  display: block;
-  margin-left: -410px;
+  z-index: -1;
+}
+
+#home-video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+@media only screen and (max-width: 600px) {
+  #home-video {
+    width: 100%;
+    height: auto;
+  }
 }
 
 .glitch {
