Fixing mobile view again

--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -2,6 +2,7 @@ $bg-color: #4242e6;
 $glitch-bg-color: $bg-color;
 
 .home-page {
+  height: 100vh;
   background: rgb(4, 43, 106);
   background: linear-gradient(
     135deg,
